deploy: 432c1a016de3ab1c1580651cc93d98a09e1fb1d4

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:25:16.432206Z",
-     "iopub.status.busy": "2025-07-24T15:25:16.431929Z",
-     "iopub.status.idle": "2025-07-24T15:25:17.396742Z",
-     "shell.execute_reply": "2025-07-24T15:25:17.396128Z"
+     "iopub.execute_input": "2025-07-24T15:30:52.956687Z",
+     "iopub.status.busy": "2025-07-24T15:30:52.956438Z",
+     "iopub.status.idle": "2025-07-24T15:30:53.923130Z",
+     "shell.execute_reply": "2025-07-24T15:30:53.922625Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:25:17.398641Z",
-     "iopub.status.busy": "2025-07-24T15:25:17.398400Z",
-     "iopub.status.idle": "2025-07-24T15:25:17.716607Z",
-     "shell.execute_reply": "2025-07-24T15:25:17.716013Z"
+     "iopub.execute_input": "2025-07-24T15:30:53.924856Z",
+     "iopub.status.busy": "2025-07-24T15:30:53.924619Z",
+     "iopub.status.idle": "2025-07-24T15:30:54.253656Z",
+     "shell.execute_reply": "2025-07-24T15:30:54.253028Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:25:17.718360Z",
-     "iopub.status.busy": "2025-07-24T15:25:17.718168Z",
-     "iopub.status.idle": "2025-07-24T15:25:17.858232Z",
-     "shell.execute_reply": "2025-07-24T15:25:17.857581Z"
+     "iopub.execute_input": "2025-07-24T15:30:54.255262Z",
+     "iopub.status.busy": "2025-07-24T15:30:54.255100Z",
+     "iopub.status.idle": "2025-07-24T15:30:54.393760Z",
+     "shell.execute_reply": "2025-07-24T15:30:54.393180Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:25:17.859889Z",
-     "iopub.status.busy": "2025-07-24T15:25:17.859720Z",
-     "iopub.status.idle": "2025-07-24T15:25:18.257785Z",
-     "shell.execute_reply": "2025-07-24T15:25:18.257274Z"
+     "iopub.execute_input": "2025-07-24T15:30:54.395425Z",
+     "iopub.status.busy": "2025-07-24T15:30:54.395234Z",
+     "iopub.status.idle": "2025-07-24T15:30:54.793240Z",
+     "shell.execute_reply": "2025-07-24T15:30:54.792726Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:25:18.259660Z",
-     "iopub.status.busy": "2025-07-24T15:25:18.259481Z",
-     "iopub.status.idle": "2025-07-24T15:25:18.546321Z",
-     "shell.execute_reply": "2025-07-24T15:25:18.545752Z"
+     "iopub.execute_input": "2025-07-24T15:30:54.794905Z",
+     "iopub.status.busy": "2025-07-24T15:30:54.794748Z",
+     "iopub.status.idle": "2025-07-24T15:30:55.083192Z",
+     "shell.execute_reply": "2025-07-24T15:30:55.082659Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:25:18.548029Z",
-     "iopub.status.busy": "2025-07-24T15:25:18.547839Z",
-     "iopub.status.idle": "2025-07-24T15:25:18.550420Z",
-     "shell.execute_reply": "2025-07-24T15:25:18.549828Z"
+     "iopub.execute_input": "2025-07-24T15:30:55.084842Z",
+     "iopub.status.busy": "2025-07-24T15:30:55.084677Z",
+     "iopub.status.idle": "2025-07-24T15:30:55.086933Z",
+     "shell.execute_reply": "2025-07-24T15:30:55.086461Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:25:18.551892Z",
-     "iopub.status.busy": "2025-07-24T15:25:18.551726Z",
-     "iopub.status.idle": "2025-07-24T15:25:18.554677Z",
-     "shell.execute_reply": "2025-07-24T15:25:18.554121Z"
+     "iopub.execute_input": "2025-07-24T15:30:55.088304Z",
+     "iopub.status.busy": "2025-07-24T15:30:55.088145Z",
+     "iopub.status.idle": "2025-07-24T15:30:55.091089Z",
+     "shell.execute_reply": "2025-07-24T15:30:55.090493Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:25:18.556264Z",
-     "iopub.status.busy": "2025-07-24T15:25:18.556097Z",
-     "iopub.status.idle": "2025-07-24T15:25:19.615752Z",
-     "shell.execute_reply": "2025-07-24T15:25:19.615132Z"
+     "iopub.execute_input": "2025-07-24T15:30:55.092686Z",
+     "iopub.status.busy": "2025-07-24T15:30:55.092488Z",
+     "iopub.status.idle": "2025-07-24T15:30:56.177081Z",
+     "shell.execute_reply": "2025-07-24T15:30:56.176586Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmphuDVqq\", R: \"/tmp/RtmpSbNyez\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/Rtmpvb3k5c\", R: \"/tmp/RtmpU6g7xZ\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:25:19.617687Z",
-     "iopub.status.busy": "2025-07-24T15:25:19.617517Z",
-     "iopub.status.idle": "2025-07-24T15:25:20.031548Z",
-     "shell.execute_reply": "2025-07-24T15:25:20.030941Z"
+     "iopub.execute_input": "2025-07-24T15:30:56.178798Z",
+     "iopub.status.busy": "2025-07-24T15:30:56.178641Z",
+     "iopub.status.idle": "2025-07-24T15:30:56.589311Z",
+     "shell.execute_reply": "2025-07-24T15:30:56.588807Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:25:20.033227Z",
-     "iopub.status.busy": "2025-07-24T15:25:20.033059Z",
-     "iopub.status.idle": "2025-07-24T15:25:20.352735Z",
-     "shell.execute_reply": "2025-07-24T15:25:20.352193Z"
+     "iopub.execute_input": "2025-07-24T15:30:56.590958Z",
+     "iopub.status.busy": "2025-07-24T15:30:56.590790Z",
+     "iopub.status.idle": "2025-07-24T15:30:56.924671Z",
+     "shell.execute_reply": "2025-07-24T15:30:56.924144Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:25:20.354289Z",
-     "iopub.status.busy": "2025-07-24T15:25:20.354131Z",
-     "iopub.status.idle": "2025-07-24T15:25:20.361229Z",
-     "shell.execute_reply": "2025-07-24T15:25:20.360761Z"
+     "iopub.execute_input": "2025-07-24T15:30:56.926210Z",
+     "iopub.status.busy": "2025-07-24T15:30:56.926052Z",
+     "iopub.status.idle": "2025-07-24T15:30:56.932967Z",
+     "shell.execute_reply": "2025-07-24T15:30:56.932518Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:25:20.362679Z",
-     "iopub.status.busy": "2025-07-24T15:25:20.362517Z",
-     "iopub.status.idle": "2025-07-24T15:25:20.773962Z",
-     "shell.execute_reply": "2025-07-24T15:25:20.773367Z"
+     "iopub.execute_input": "2025-07-24T15:30:56.934413Z",
+     "iopub.status.busy": "2025-07-24T15:30:56.934261Z",
+     "iopub.status.idle": "2025-07-24T15:30:57.356308Z",
+     "shell.execute_reply": "2025-07-24T15:30:57.355706Z"
     }
    },
    "outputs": [
