deploy: 11c5906f346bbe6da9650025880d3c5803876d22

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:30:52.956687Z",
-     "iopub.status.busy": "2025-07-24T15:30:52.956438Z",
-     "iopub.status.idle": "2025-07-24T15:30:53.923130Z",
-     "shell.execute_reply": "2025-07-24T15:30:53.922625Z"
+     "iopub.execute_input": "2025-07-24T17:12:20.132125Z",
+     "iopub.status.busy": "2025-07-24T17:12:20.131895Z",
+     "iopub.status.idle": "2025-07-24T17:12:21.065369Z",
+     "shell.execute_reply": "2025-07-24T17:12:21.064783Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:30:53.924856Z",
-     "iopub.status.busy": "2025-07-24T15:30:53.924619Z",
-     "iopub.status.idle": "2025-07-24T15:30:54.253656Z",
-     "shell.execute_reply": "2025-07-24T15:30:54.253028Z"
+     "iopub.execute_input": "2025-07-24T17:12:21.067247Z",
+     "iopub.status.busy": "2025-07-24T17:12:21.066999Z",
+     "iopub.status.idle": "2025-07-24T17:12:21.367590Z",
+     "shell.execute_reply": "2025-07-24T17:12:21.366978Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:30:54.255262Z",
-     "iopub.status.busy": "2025-07-24T15:30:54.255100Z",
-     "iopub.status.idle": "2025-07-24T15:30:54.393760Z",
-     "shell.execute_reply": "2025-07-24T15:30:54.393180Z"
+     "iopub.execute_input": "2025-07-24T17:12:21.369286Z",
+     "iopub.status.busy": "2025-07-24T17:12:21.369121Z",
+     "iopub.status.idle": "2025-07-24T17:12:21.507047Z",
+     "shell.execute_reply": "2025-07-24T17:12:21.506566Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:30:54.395425Z",
-     "iopub.status.busy": "2025-07-24T15:30:54.395234Z",
-     "iopub.status.idle": "2025-07-24T15:30:54.793240Z",
-     "shell.execute_reply": "2025-07-24T15:30:54.792726Z"
+     "iopub.execute_input": "2025-07-24T17:12:21.508735Z",
+     "iopub.status.busy": "2025-07-24T17:12:21.508573Z",
+     "iopub.status.idle": "2025-07-24T17:12:21.912959Z",
+     "shell.execute_reply": "2025-07-24T17:12:21.912486Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:30:54.794905Z",
-     "iopub.status.busy": "2025-07-24T15:30:54.794748Z",
-     "iopub.status.idle": "2025-07-24T15:30:55.083192Z",
-     "shell.execute_reply": "2025-07-24T15:30:55.082659Z"
+     "iopub.execute_input": "2025-07-24T17:12:21.914582Z",
+     "iopub.status.busy": "2025-07-24T17:12:21.914419Z",
+     "iopub.status.idle": "2025-07-24T17:12:22.200714Z",
+     "shell.execute_reply": "2025-07-24T17:12:22.200240Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:30:55.084842Z",
-     "iopub.status.busy": "2025-07-24T15:30:55.084677Z",
-     "iopub.status.idle": "2025-07-24T15:30:55.086933Z",
-     "shell.execute_reply": "2025-07-24T15:30:55.086461Z"
+     "iopub.execute_input": "2025-07-24T17:12:22.202264Z",
+     "iopub.status.busy": "2025-07-24T17:12:22.202098Z",
+     "iopub.status.idle": "2025-07-24T17:12:22.204609Z",
+     "shell.execute_reply": "2025-07-24T17:12:22.204022Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:30:55.088304Z",
-     "iopub.status.busy": "2025-07-24T15:30:55.088145Z",
-     "iopub.status.idle": "2025-07-24T15:30:55.091089Z",
-     "shell.execute_reply": "2025-07-24T15:30:55.090493Z"
+     "iopub.execute_input": "2025-07-24T17:12:22.206017Z",
+     "iopub.status.busy": "2025-07-24T17:12:22.205858Z",
+     "iopub.status.idle": "2025-07-24T17:12:22.208754Z",
+     "shell.execute_reply": "2025-07-24T17:12:22.208188Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:30:55.092686Z",
-     "iopub.status.busy": "2025-07-24T15:30:55.092488Z",
-     "iopub.status.idle": "2025-07-24T15:30:56.177081Z",
-     "shell.execute_reply": "2025-07-24T15:30:56.176586Z"
+     "iopub.execute_input": "2025-07-24T17:12:22.210174Z",
+     "iopub.status.busy": "2025-07-24T17:12:22.210012Z",
+     "iopub.status.idle": "2025-07-24T17:12:23.289979Z",
+     "shell.execute_reply": "2025-07-24T17:12:23.289507Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/Rtmpvb3k5c\", R: \"/tmp/RtmpU6g7xZ\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpVfkzqO\", R: \"/tmp/RtmpoWupDt\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:30:56.178798Z",
-     "iopub.status.busy": "2025-07-24T15:30:56.178641Z",
-     "iopub.status.idle": "2025-07-24T15:30:56.589311Z",
-     "shell.execute_reply": "2025-07-24T15:30:56.588807Z"
+     "iopub.execute_input": "2025-07-24T17:12:23.291690Z",
+     "iopub.status.busy": "2025-07-24T17:12:23.291536Z",
+     "iopub.status.idle": "2025-07-24T17:12:23.693980Z",
+     "shell.execute_reply": "2025-07-24T17:12:23.693414Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:30:56.590958Z",
-     "iopub.status.busy": "2025-07-24T15:30:56.590790Z",
-     "iopub.status.idle": "2025-07-24T15:30:56.924671Z",
-     "shell.execute_reply": "2025-07-24T15:30:56.924144Z"
+     "iopub.execute_input": "2025-07-24T17:12:23.695633Z",
+     "iopub.status.busy": "2025-07-24T17:12:23.695469Z",
+     "iopub.status.idle": "2025-07-24T17:12:24.014631Z",
+     "shell.execute_reply": "2025-07-24T17:12:24.014112Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:30:56.926210Z",
-     "iopub.status.busy": "2025-07-24T15:30:56.926052Z",
-     "iopub.status.idle": "2025-07-24T15:30:56.932967Z",
-     "shell.execute_reply": "2025-07-24T15:30:56.932518Z"
+     "iopub.execute_input": "2025-07-24T17:12:24.016168Z",
+     "iopub.status.busy": "2025-07-24T17:12:24.016007Z",
+     "iopub.status.idle": "2025-07-24T17:12:24.023072Z",
+     "shell.execute_reply": "2025-07-24T17:12:24.022506Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T15:30:56.934413Z",
-     "iopub.status.busy": "2025-07-24T15:30:56.934261Z",
-     "iopub.status.idle": "2025-07-24T15:30:57.356308Z",
-     "shell.execute_reply": "2025-07-24T15:30:57.355706Z"
+     "iopub.execute_input": "2025-07-24T17:12:24.024603Z",
+     "iopub.status.busy": "2025-07-24T17:12:24.024442Z",
+     "iopub.status.idle": "2025-07-24T17:12:24.431993Z",
+     "shell.execute_reply": "2025-07-24T17:12:24.431523Z"
     }
    },
    "outputs": [
