--- a/docs/examples/example08_rai.ipynb
+++ b/docs/examples/example08_rai.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../../doc/examples/data/DEBILT.csv\", index_col=0, parse_dates=True)\n",
+    "df = pd.read_csv(\"data/DEBILT.csv\", index_col=0, parse_dates=True)\n",
     "prec = df[\"Prec [m/d] 260_DEBILT\"].multiply(1e3).resample(\"MS\").sum()"
    ]
   },
@@ -103,6 +103,7 @@
    "metadata": {},
    "source": [
     "Interpretation based on Hansel (2015) - [The Modified Rainfall Anomaly Index (mRAI)](https://doi.org/10.1007/s00704-015-1389-y)\n",
+    "\n",
     "| RAI                                 | Description                   | mRAI                  | Description                   |\n",
     "| :---------------------------------- | :---------------------------- | :-------------------------------- | :---------------------------- |\n",
     "| $\\ge$ 3.00                           | Extremely wet                 | $\\ge$ 2.00                     | Extremely wet                 |\n",
@@ -115,11 +116,17 @@
     "| -2.99 to -2.00                       | Very dry                      | -1.99 to -1.50                 | Very dry                      |\n",
     "| ≤-3.00                           | Extremely dry                 | ≤-2.00                     | Extremely dry                 |"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75058050",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "SPEI",
    "language": "python",
    "name": "python3"
   },
