deploy: 00b6bd89277e5378c04471b5d97923aa7cbc1cd2

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:12:20.132125Z",
-     "iopub.status.busy": "2025-07-24T17:12:20.131895Z",
-     "iopub.status.idle": "2025-07-24T17:12:21.065369Z",
-     "shell.execute_reply": "2025-07-24T17:12:21.064783Z"
+     "iopub.execute_input": "2025-07-24T17:21:23.677065Z",
+     "iopub.status.busy": "2025-07-24T17:21:23.676828Z",
+     "iopub.status.idle": "2025-07-24T17:21:24.652618Z",
+     "shell.execute_reply": "2025-07-24T17:21:24.652045Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:12:21.067247Z",
-     "iopub.status.busy": "2025-07-24T17:12:21.066999Z",
-     "iopub.status.idle": "2025-07-24T17:12:21.367590Z",
-     "shell.execute_reply": "2025-07-24T17:12:21.366978Z"
+     "iopub.execute_input": "2025-07-24T17:21:24.654457Z",
+     "iopub.status.busy": "2025-07-24T17:21:24.654215Z",
+     "iopub.status.idle": "2025-07-24T17:21:24.970337Z",
+     "shell.execute_reply": "2025-07-24T17:21:24.969768Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:12:21.369286Z",
-     "iopub.status.busy": "2025-07-24T17:12:21.369121Z",
-     "iopub.status.idle": "2025-07-24T17:12:21.507047Z",
-     "shell.execute_reply": "2025-07-24T17:12:21.506566Z"
+     "iopub.execute_input": "2025-07-24T17:21:24.971986Z",
+     "iopub.status.busy": "2025-07-24T17:21:24.971804Z",
+     "iopub.status.idle": "2025-07-24T17:21:25.110552Z",
+     "shell.execute_reply": "2025-07-24T17:21:25.109944Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:12:21.508735Z",
-     "iopub.status.busy": "2025-07-24T17:12:21.508573Z",
-     "iopub.status.idle": "2025-07-24T17:12:21.912959Z",
-     "shell.execute_reply": "2025-07-24T17:12:21.912486Z"
+     "iopub.execute_input": "2025-07-24T17:21:25.112232Z",
+     "iopub.status.busy": "2025-07-24T17:21:25.112041Z",
+     "iopub.status.idle": "2025-07-24T17:21:25.509886Z",
+     "shell.execute_reply": "2025-07-24T17:21:25.509391Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:12:21.914582Z",
-     "iopub.status.busy": "2025-07-24T17:12:21.914419Z",
-     "iopub.status.idle": "2025-07-24T17:12:22.200714Z",
-     "shell.execute_reply": "2025-07-24T17:12:22.200240Z"
+     "iopub.execute_input": "2025-07-24T17:21:25.511550Z",
+     "iopub.status.busy": "2025-07-24T17:21:25.511387Z",
+     "iopub.status.idle": "2025-07-24T17:21:25.797524Z",
+     "shell.execute_reply": "2025-07-24T17:21:25.796966Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:12:22.202264Z",
-     "iopub.status.busy": "2025-07-24T17:12:22.202098Z",
-     "iopub.status.idle": "2025-07-24T17:12:22.204609Z",
-     "shell.execute_reply": "2025-07-24T17:12:22.204022Z"
+     "iopub.execute_input": "2025-07-24T17:21:25.799169Z",
+     "iopub.status.busy": "2025-07-24T17:21:25.798983Z",
+     "iopub.status.idle": "2025-07-24T17:21:25.801453Z",
+     "shell.execute_reply": "2025-07-24T17:21:25.800990Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:12:22.206017Z",
-     "iopub.status.busy": "2025-07-24T17:12:22.205858Z",
-     "iopub.status.idle": "2025-07-24T17:12:22.208754Z",
-     "shell.execute_reply": "2025-07-24T17:12:22.208188Z"
+     "iopub.execute_input": "2025-07-24T17:21:25.802825Z",
+     "iopub.status.busy": "2025-07-24T17:21:25.802667Z",
+     "iopub.status.idle": "2025-07-24T17:21:25.805529Z",
+     "shell.execute_reply": "2025-07-24T17:21:25.805036Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:12:22.210174Z",
-     "iopub.status.busy": "2025-07-24T17:12:22.210012Z",
-     "iopub.status.idle": "2025-07-24T17:12:23.289979Z",
-     "shell.execute_reply": "2025-07-24T17:12:23.289507Z"
+     "iopub.execute_input": "2025-07-24T17:21:25.807054Z",
+     "iopub.status.busy": "2025-07-24T17:21:25.806884Z",
+     "iopub.status.idle": "2025-07-24T17:21:26.874659Z",
+     "shell.execute_reply": "2025-07-24T17:21:26.874151Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpVfkzqO\", R: \"/tmp/RtmpoWupDt\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpZQRiga\", R: \"/tmp/Rtmp6PRIdM\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:12:23.291690Z",
-     "iopub.status.busy": "2025-07-24T17:12:23.291536Z",
-     "iopub.status.idle": "2025-07-24T17:12:23.693980Z",
-     "shell.execute_reply": "2025-07-24T17:12:23.693414Z"
+     "iopub.execute_input": "2025-07-24T17:21:26.876422Z",
+     "iopub.status.busy": "2025-07-24T17:21:26.876267Z",
+     "iopub.status.idle": "2025-07-24T17:21:27.288118Z",
+     "shell.execute_reply": "2025-07-24T17:21:27.287572Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:12:23.695633Z",
-     "iopub.status.busy": "2025-07-24T17:12:23.695469Z",
-     "iopub.status.idle": "2025-07-24T17:12:24.014631Z",
-     "shell.execute_reply": "2025-07-24T17:12:24.014112Z"
+     "iopub.execute_input": "2025-07-24T17:21:27.289984Z",
+     "iopub.status.busy": "2025-07-24T17:21:27.289809Z",
+     "iopub.status.idle": "2025-07-24T17:21:27.614635Z",
+     "shell.execute_reply": "2025-07-24T17:21:27.613989Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:12:24.016168Z",
-     "iopub.status.busy": "2025-07-24T17:12:24.016007Z",
-     "iopub.status.idle": "2025-07-24T17:12:24.023072Z",
-     "shell.execute_reply": "2025-07-24T17:12:24.022506Z"
+     "iopub.execute_input": "2025-07-24T17:21:27.616318Z",
+     "iopub.status.busy": "2025-07-24T17:21:27.616145Z",
+     "iopub.status.idle": "2025-07-24T17:21:27.623638Z",
+     "shell.execute_reply": "2025-07-24T17:21:27.623068Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:12:24.024603Z",
-     "iopub.status.busy": "2025-07-24T17:12:24.024442Z",
-     "iopub.status.idle": "2025-07-24T17:12:24.431993Z",
-     "shell.execute_reply": "2025-07-24T17:12:24.431523Z"
+     "iopub.execute_input": "2025-07-24T17:21:27.625326Z",
+     "iopub.status.busy": "2025-07-24T17:21:27.625159Z",
+     "iopub.status.idle": "2025-07-24T17:21:28.043889Z",
+     "shell.execute_reply": "2025-07-24T17:21:28.043257Z"
     }
    },
    "outputs": [
