deploy: c6bbf012b21cfd527e07f5a17f46b31af3143f93

--- a/examples/example04_package_comparison.ipynb
+++ b/examples/example04_package_comparison.ipynb
@@ -29,10 +29,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:21:23.677065Z",
-     "iopub.status.busy": "2025-07-24T17:21:23.676828Z",
-     "iopub.status.idle": "2025-07-24T17:21:24.652618Z",
-     "shell.execute_reply": "2025-07-24T17:21:24.652045Z"
+     "iopub.execute_input": "2025-07-24T17:55:43.683520Z",
+     "iopub.status.busy": "2025-07-24T17:55:43.683356Z",
+     "iopub.status.idle": "2025-07-24T17:55:44.654134Z",
+     "shell.execute_reply": "2025-07-24T17:55:44.653498Z"
     }
    },
    "outputs": [
@@ -72,10 +72,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:21:24.654457Z",
-     "iopub.status.busy": "2025-07-24T17:21:24.654215Z",
-     "iopub.status.idle": "2025-07-24T17:21:24.970337Z",
-     "shell.execute_reply": "2025-07-24T17:21:24.969768Z"
+     "iopub.execute_input": "2025-07-24T17:55:44.656131Z",
+     "iopub.status.busy": "2025-07-24T17:55:44.655870Z",
+     "iopub.status.idle": "2025-07-24T17:55:44.982323Z",
+     "shell.execute_reply": "2025-07-24T17:55:44.981696Z"
     }
    },
    "outputs": [
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:21:24.971986Z",
-     "iopub.status.busy": "2025-07-24T17:21:24.971804Z",
-     "iopub.status.idle": "2025-07-24T17:21:25.110552Z",
-     "shell.execute_reply": "2025-07-24T17:21:25.109944Z"
+     "iopub.execute_input": "2025-07-24T17:55:44.984106Z",
+     "iopub.status.busy": "2025-07-24T17:55:44.983905Z",
+     "iopub.status.idle": "2025-07-24T17:55:45.123753Z",
+     "shell.execute_reply": "2025-07-24T17:55:45.123157Z"
     }
    },
    "outputs": [
@@ -145,10 +145,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:21:25.112232Z",
-     "iopub.status.busy": "2025-07-24T17:21:25.112041Z",
-     "iopub.status.idle": "2025-07-24T17:21:25.509886Z",
-     "shell.execute_reply": "2025-07-24T17:21:25.509391Z"
+     "iopub.execute_input": "2025-07-24T17:55:45.125527Z",
+     "iopub.status.busy": "2025-07-24T17:55:45.125360Z",
+     "iopub.status.idle": "2025-07-24T17:55:45.524977Z",
+     "shell.execute_reply": "2025-07-24T17:55:45.524431Z"
     }
    },
    "outputs": [
@@ -193,10 +193,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:21:25.511550Z",
-     "iopub.status.busy": "2025-07-24T17:21:25.511387Z",
-     "iopub.status.idle": "2025-07-24T17:21:25.797524Z",
-     "shell.execute_reply": "2025-07-24T17:21:25.796966Z"
+     "iopub.execute_input": "2025-07-24T17:55:45.526661Z",
+     "iopub.status.busy": "2025-07-24T17:55:45.526500Z",
+     "iopub.status.idle": "2025-07-24T17:55:45.815260Z",
+     "shell.execute_reply": "2025-07-24T17:55:45.814603Z"
     }
    },
    "outputs": [
@@ -361,10 +361,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:21:25.799169Z",
-     "iopub.status.busy": "2025-07-24T17:21:25.798983Z",
-     "iopub.status.idle": "2025-07-24T17:21:25.801453Z",
-     "shell.execute_reply": "2025-07-24T17:21:25.800990Z"
+     "iopub.execute_input": "2025-07-24T17:55:45.816940Z",
+     "iopub.status.busy": "2025-07-24T17:55:45.816765Z",
+     "iopub.status.idle": "2025-07-24T17:55:45.819421Z",
+     "shell.execute_reply": "2025-07-24T17:55:45.818815Z"
     }
    },
    "outputs": [],
@@ -378,10 +378,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:21:25.802825Z",
-     "iopub.status.busy": "2025-07-24T17:21:25.802667Z",
-     "iopub.status.idle": "2025-07-24T17:21:25.805529Z",
-     "shell.execute_reply": "2025-07-24T17:21:25.805036Z"
+     "iopub.execute_input": "2025-07-24T17:55:45.820924Z",
+     "iopub.status.busy": "2025-07-24T17:55:45.820772Z",
+     "iopub.status.idle": "2025-07-24T17:55:45.823383Z",
+     "shell.execute_reply": "2025-07-24T17:55:45.822927Z"
     }
    },
    "outputs": [],
@@ -438,10 +438,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:21:25.807054Z",
-     "iopub.status.busy": "2025-07-24T17:21:25.806884Z",
-     "iopub.status.idle": "2025-07-24T17:21:26.874659Z",
-     "shell.execute_reply": "2025-07-24T17:21:26.874151Z"
+     "iopub.execute_input": "2025-07-24T17:55:45.824826Z",
+     "iopub.status.busy": "2025-07-24T17:55:45.824677Z",
+     "iopub.status.idle": "2025-07-24T17:55:46.909987Z",
+     "shell.execute_reply": "2025-07-24T17:55:46.909493Z"
     }
    },
    "outputs": [
@@ -459,7 +459,7 @@
      "text": [
       "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"LD_LIBRARY_PATH\" redefined by R and overriding existing variable. Current: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\", R: \"/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/R/4.3.3/lib/R/lib:/usr/local/lib:/usr/lib/x86_64-linux-gnu:/usr/lib/jvm/java-21-openjdk-amd64/lib/server:/opt/hostedtoolcache/Python/3.11.13/x64/lib\"\n",
       "  warnings.warn(\n",
-      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpZQRiga\", R: \"/tmp/Rtmp6PRIdM\"\n",
+      "/home/runner/work/SPEI/SPEI/.tox/docu/lib/python3.11/site-packages/rpy2/rinterface/__init__.py:1211: UserWarning: Environment variable \"R_SESSION_TMPDIR\" redefined by R and overriding existing variable. Current: \"/tmp/RtmpavjiFg\", R: \"/tmp/RtmpQmEjIB\"\n",
       "  warnings.warn(\n"
      ]
     },
@@ -502,10 +502,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:21:26.876422Z",
-     "iopub.status.busy": "2025-07-24T17:21:26.876267Z",
-     "iopub.status.idle": "2025-07-24T17:21:27.288118Z",
-     "shell.execute_reply": "2025-07-24T17:21:27.287572Z"
+     "iopub.execute_input": "2025-07-24T17:55:46.911828Z",
+     "iopub.status.busy": "2025-07-24T17:55:46.911669Z",
+     "iopub.status.idle": "2025-07-24T17:55:47.355641Z",
+     "shell.execute_reply": "2025-07-24T17:55:47.355060Z"
     }
    },
    "outputs": [
@@ -585,10 +585,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:21:27.289984Z",
-     "iopub.status.busy": "2025-07-24T17:21:27.289809Z",
-     "iopub.status.idle": "2025-07-24T17:21:27.614635Z",
-     "shell.execute_reply": "2025-07-24T17:21:27.613989Z"
+     "iopub.execute_input": "2025-07-24T17:55:47.357490Z",
+     "iopub.status.busy": "2025-07-24T17:55:47.357294Z",
+     "iopub.status.idle": "2025-07-24T17:55:47.691271Z",
+     "shell.execute_reply": "2025-07-24T17:55:47.690684Z"
     }
    },
    "outputs": [
@@ -612,10 +612,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:21:27.616318Z",
-     "iopub.status.busy": "2025-07-24T17:21:27.616145Z",
-     "iopub.status.idle": "2025-07-24T17:21:27.623638Z",
-     "shell.execute_reply": "2025-07-24T17:21:27.623068Z"
+     "iopub.execute_input": "2025-07-24T17:55:47.692927Z",
+     "iopub.status.busy": "2025-07-24T17:55:47.692750Z",
+     "iopub.status.idle": "2025-07-24T17:55:47.700683Z",
+     "shell.execute_reply": "2025-07-24T17:55:47.700198Z"
     }
    },
    "outputs": [
@@ -742,10 +742,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-07-24T17:21:27.625326Z",
-     "iopub.status.busy": "2025-07-24T17:21:27.625159Z",
-     "iopub.status.idle": "2025-07-24T17:21:28.043889Z",
-     "shell.execute_reply": "2025-07-24T17:21:28.043257Z"
+     "iopub.execute_input": "2025-07-24T17:55:47.702155Z",
+     "iopub.status.busy": "2025-07-24T17:55:47.701992Z",
+     "iopub.status.idle": "2025-07-24T17:55:48.132674Z",
+     "shell.execute_reply": "2025-07-24T17:55:48.131999Z"
     }
    },
    "outputs": [
